Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBooleanBoolean.quorum
class Main
    action Main
        boolean v = Test()
        if v = true
            output "passed"
        end
    end

    action Test() returns boolean
        boolean var = true
        return var
    end
end