Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanObject.quorum
class Main
    action Main
        boolean v = Test()
    end

    action Test() returns boolean
        Object var
        return var
    end
end